# jpocon.github.io

./: CNAME  README.md  _config.yml  about.html  courses.html  pyproject.toml  search.html
_data/: navigation.yml
_includes/: author-profile.html  head.html
_pages/: 404.md  about.html  about.md  professional.md  publications.md  talks.md  teaching.md
_sass/: _footer.scss  _masthead.scss  _page.scss  _print.scss  _sidebar.scss
_sources/: about.md
assets/js/: _main.js
courses/cartography/: index.html
courses/spatialDatabase/: _config.yml  _toc.yml
courses/spatialDatabase/_build/.doctrees/: environment.pickle
courses/spatialDatabase/_build/.doctrees/content/: about.doctree  syllabus.doctree
courses/spatialDatabase/_build/html/: .buildinfo  index.html  objects.inv  search.html
courses/spatialDatabase/_build/html/content/: about.html  syllabus.html
docs/spatialDatabase/: _config.yml
docs/spatialDatabase/_build/.doctrees/: environment.pickle
docs/spatialDatabase/_build/.doctrees/content/: about.doctree  syllabus.doctree
docs/spatialDatabase/_build/html/: .buildinfo  genindex.html  searchindex.js
spatial-database/: README.md  environment.yml
spatial-database/.github/workflows/: cache.yml  ci.yml  execution.yml  linkcheck.yml  publish.yml
spatial-database/_notebook_repo/: README.md  environment.yml
website/: _config.yml  _toc.yml  courses.md
website/_build/.doctrees/: about.doctree  courses.doctree  environment.pickle
website/_build/html/: .buildinfo  genindex.html  objects.inv  searchindex.js
website/_build/html/_sources/: courses.md
(+10 files in other folders)
